--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Juanes Software</title>
+<title>Vikode Software</title>
 <link rel="stylesheet" type="text/css" href="../css/1553735433.css" />
 </head>
 <body>
     <div id="wrapper">
         <div id="header">
           <div id="logo">
-            Ｊｕａｎｅｓ＇ｓ　Ｓｏｆｔｗａｒｅ　茨でピ
+            ＶｉＫｏｄｅ　ぷ域ホ
           </div>
             <div id="nav">
                 <ul>
@@ -24,7 +24,7 @@
             <div class="contentmain">
                 <div class="transparent">
                 <h2 class="titulo">Tecnología a tu alcance</h2>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+           <p>Aplicaciones para todos. </p>
        </div>
        </div>
        <h2 class="titulo2">Servicios de Tecnología</h2>
@@ -50,7 +50,7 @@
        </div>
    </div>
 
-   <!--diseño2--->
+   <!--diseño2-->
    <h2 class="titulo2">Servicios de Tecnología</h2>
    <div id="servicios2">
        
@@ -92,7 +92,7 @@
 
    </div>
         <div id="footer">
-            <p> Ｊｕａｎｅｓ＇ｓ　Ｓｏｆｔｗａｒｅ　茨でピ 2019</p>
+            <p> ＶｉＫｏｄｅ　ぷ域ホ 2019</p>
         </div>
     </div>
 </body>
