--- a/html/index.html
+++ b/html/index.html
@@ -80,13 +80,14 @@
    <h2 class="titulo2">Sobre Nosotros</h2>  
        <div class="content">
         <div id="imagenes">
-            <img src="juan.jpg"  />
-            <img src="vale.jpeg"  />
-            <img src="putojuan.jpg"  />
-            <img src="hector.jpg"  />
-            <img src="alexis.jpg"  />
+            <img src="juan.jpg" />
+            <img src="vale.jpeg" />
+            <img src="putojuan.jpg" />
+            <img src="hector.jpg" />
+            <img src="alexis.jpg" />
         </div>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p><p>Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. </p>
+           <p>ViKode es una empresa de software mexicana cuyo objetivo es apoyar a las pequeñas y medianas empresas con una imagen profesional en la web y aplicaciones accesibles. </p>
+           <p>Somos un grupo de emprendedores egresados de la UNAM, licenciados en Ciencias de la Computación, experimentados en el desarrollo web y de aplicaciones moviles. </p>
        </div>
 </div>
 
