Seccion 'Sobre Nosotros' 2

--- a/html/index.html
+++ b/html/index.html
@@ -88,6 +88,11 @@
         </div>
            <p>ViKode es una empresa de software mexicana cuyo objetivo es apoyar a las pequeñas y medianas empresas con una imagen profesional en la web y aplicaciones accesibles. </p>
            <p>Somos un grupo de emprendedores egresados de la UNAM, licenciados en Ciencias de la Computación, experimentados en el desarrollo web y de aplicaciones moviles. </p>
+           <p>Juan Carlos Montero Santiago - [correo] <br>
+              Juan Carlos Garduño Vargas - [correo] <br>
+              Valeria Gómez López - [correo] <br>
+              Héctor Santaella Marín - [correo] <br>
+              Alexis Rodríguez Hernández - [correo]</p>
        </div>
 </div>
 
