Asesoria y Diseño de Páginas Web

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
        <div class="content">
             <img src="3.GIF" style="float:left;" />
             <h2 class="titulo3">Asesoria y Diseño de Páginas Web</h2>
-           <p>Tengo hambre jaja saludos. </p>
+           <p>Nosotros como empresa de desarrollo web, somos expertos en el analisis y diseño de aplicaciones, de manera que podemos orientarte en el desarrollo e implementación de cualquier aplicación que se requiera. Con conocimientos en los lenguajes más populares en el mercado como: Java, Python, Swift, C#, JavaScript, HTML, Bootstrap. Contamos con personal altamente capacitado para el diseño y modelado de arquitectura de software</p>
        </div>
 
        <div class="content">
